# somax

./: .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  Makefile  README.md  dvc.yaml  environment.yaml  myst.yml  pixi.toml  pyproject.toml  references.bib  release-please-config.json
.claude/commands/: create-gh-issue.md  link-gh-issues.md  squash-commit.md
.github/: copilot-instructions.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug.md  config.yml  design.md  epic-theme.md  epic-wave.md  feature.md  research.md
.github/instructions/: code-review.instructions.md  docs-examples.instructions.md  python-coding.instructions.md
.github/scripts/: create-labels.sh  link-issues.sh
.github/skills/code-review/: SKILL.md
.github/templates/: wave-backlog.md
.github/workflows/: ci.yml  codeql.yml  conventional-commits.yml  label-pr.yml  lint.yml  pages.yml  pre-commit-autoupdate.yml  pytest.yaml  typecheck.yml
configs/_authoring/: __init__.py  _common.py  doublegyre_bc_qg.py  doublegyre_bt_qg.py  spinup_bc_qg.py  swm_jet.py
configs/model/: qg_barotropic.yaml  qg_multilayer.yaml  swm.yaml  swm_linear.yaml
configs/simulation/: doublegyre_bc_qg.yaml  doublegyre_bt_qg.yaml  mqg.yaml  spinup_bc_qg.yaml  swm.yaml  swm_jet.yaml
content/: index.md
content/api/: reference.md
content/notes/: grids.md  qg_spinup_durations.md  quasigeostrophic.md  shallow_water.md
content/tutorials/: getting_started.md  lorenz63_simulation.ipynb  lorenz63_simulation.py  lorenz96_simulation.ipynb  lorenz96_simulation.py  lorenz96t_simulation.ipynb  lorenz96t_simulation.py  qg_simulation.md  step01_linear_convection_1d.ipynb  step01_linear_convection_1d.py  step02_nonlinear_convection_1d.ipynb  step02_nonlinear_convection_1d.py  step03_diffusion_1d.ipynb  step03_diffusion_1d.py  step04_burgers_1d.ipynb  step04_burgers_1d.py  step05_linear_convection_2d.ipynb  step05_linear_convection_2d.py  step06_nonlinear_convection_2d.ipynb  step06_nonlinear_convection_2d.py  step07_diffusion_2d.ipynb  step07_diffusion_2d.py  step08_burgers_2d.ipynb  step08_burgers_2d.py  step09_laplace_2d.ipynb  step09_laplace_2d.py  step10_poisson_2d.ipynb  step10_poisson_2d.py  step11_helmholtz_2d.ipynb  step11_helmholtz_2d.py  step12_cavity_flow.ipynb  step12_cavity_flow.py  step13_channel_flow.ipynb  step13_channel_flow.py  step14_gravity_waves_1d.ipynb  step14_gravity_waves_1d.py  step15_shallow_water_1d.ipynb  step15_shallow_water_1d.py  step16_geostrophic_adjustment.py  step17_shallow_water_2d.ipynb  (+4 more)
notebooks/: demo_masks.ipynb  interpolation.ipynb  staggered_grids.ipynb
notebooks/dev/QG_Multilayer/: helmholtz_decomp.ipynb  mqg_analysis.ipynb  mqg_demo.ipynb  mqg_demo_octagonal.ipynb  mqg_demo_retangular.ipynb  multilayer_qg_revisited_lir-CPU.ipynb  multilayer_qg_revisited_lir-Copy1.ipynb  multilayer_qg_revisited_lir.ipynb
notebooks/dev/QG_Multilayer/taks/: mqg_MSQG.ipynb  mqg_octagonal_setupCPU.ipynb  mqg_param.ipynb  mqg_rectangular_setupCPU.ipynb
notebooks/dev/SWM/: swm.ipynb  swm_linear.ipynb  swm_scratch.ipynb
scripts/: build_configs.py  mqg_doublegyre.py  mqg_doublegyre_og.py  swm.py  swm_linear.py
somax/: __init__.py  io.py
somax/_src/: __init__.py
somax/_src/boundaries/: __init__.py  base.py  kinematic.py  wall.py
somax/_src/cli/: __init__.py  _assertions.py  _factories.py  _progress.py  _run.py  _units.py  app.py  spec.py
somax/_src/constants/: __init__.py
somax/_src/core/: checkpoint.py  forcing.py  helmholtz.py  model.py  transforms.py  types.py
somax/_src/domain/: base.py  cartesian.py  cgrid.py  domain.py  domain_latlon.py  ops.py  test_utils.py  time.py  utils.py
somax/_src/dst/: base.py  wavenumbers.py
somax/_src/experimental/: fd_spherical.py  layers.py
somax/_src/field/: base.py  continuous.py  field.py  spectral.py  utils.py
somax/_src/forcing/: wind.py
somax/_src/interp/: average.py  interp.py  test_average.py
somax/_src/inversion/: dst.py
somax/_src/io/: __init__.py  xarray.py
somax/_src/kinematics/: coriolis.py  derived.py
somax/_src/masks/: masks.py  test_masks.py  utils.py
somax/_src/models/: __init__.py  base.py  gfd_testcases.py  lorenz63.py  lorenz96.py  lorenz96t.py  pde.py
somax/_src/models/advection/: initial.py
somax/_src/models/linear_swm/: ics.py  model.py  ops.py
somax/_src/models/mqg/: decomp.py  forcing.py  model.py  ops.py  solver.py
somax/_src/models/pde1d/: __init__.py  burgers.py  diffusion.py  linear_convection.py  nonlinear_convection.py
somax/_src/models/pde2d/: __init__.py  burgers.py  diffusion.py  linear_convection.py  navier_stokes.py  nonlinear_convection.py  poisson.py
somax/_src/operators/: average.py  cgrid.py  constant.py  coriolis.py  difference.py  differential.py  dst.py  flux.py  function.py  interp.py  linear_solver.py  operators.py  pad.py  reconstruct.py  stagger.py  test_average.py  test_differential.py  test_dst.py  test_stagger.py
somax/_src/reconstructions/: base.py  flux.py  linear.py  stencils.py  test_reconstruct.py  test_upwind.py  upwind.py  weno.py
somax/_src/utils/: constants.py  coriolis.py
somax/core/: __init__.py
somax/domain/: __init__.py
somax/interp/: __init__.py
somax/masks/: __init__.py
somax/models/: __init__.py
somax/operators/: __init__.py
somax/reconstruct/: __init__.py
tests/: test_cli_assertions.py  test_cli_progress.py  test_cli_run.py  test_cli_spec.py  test_configs.py  test_io_xarray.py  test_transforms.py
tests/core/: test_checkpoint.py  test_forcing.py  test_helmholtz.py  test_model.py  test_transforms.py  test_types.py
tests/domain/: test_domain.py  test_utils.py
tests/field/: test_field.py
tests/masks/: test_masks.py
tests/models/: test_gfd_testcases.py  test_lorenz.py  test_navier_stokes.py  test_pde1d.py  test_pde2d.py  test_poisson.py  test_qg_baroclinic.py  test_qg_barotropic.py  test_qg_reparameterized.py  test_swm_1d.py  test_swm_2d.py  test_swm_multilayer.py
tests/operators/functional/: test_dst.py
tests/reconstructions/: test_reconstruct.py
(+39 files in other folders)
