[tool.poetry]
name = "somax"
version = "0.0.1"
description = "Simple Ocean Models in JAX."
authors = [
    "Juan Emmanuel Johnson <jemanjohnson34@gmail.com>",
    "Takaya Uchida <roxyboy.guppy@gmail.com>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jejjohnson/somax"
keywords = ["ocean", "jax", "shallow water", "quasigeostrophic"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Operating System :: MACOS/Linux",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Development Status :: 2 - Pre-Alpha copy",

]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jaxtyping = "^0.2.15"
beartype = "^0.13.1"
jax = ">=0.4.10"
jaxlib = ">=0.4.10"
finitevolx = { git = "https://github.com/jejjohnson/finitevolX.git" }
fieldx = { git = "https://github.com/jejjohnson/fieldx.git" }
kernex = "^0.2.0"
einops = "^0.7.0"
equinox = "^0.11.1"
jaxopt = "^0.8.1"
lineax = "^0.0.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-pretty = "^1.1.1"
pytest-xdist = "^3.2.1"
networkx = "^3.0"
coverage = "^7.2.2"
absolufy-imports = "^0.3.1"
xdoctest = "^1.1.1"
mktestdocs = "^0.2.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pylint = "^2.17.1"
nox = "^2022.11.21"
ruff = "^0.0.259"
flax = "^0.6.8"
pre-commit = "^3.2.2"
nbstripout = "^0.6.1"
pydocstyle = "^6.3.0"
codespell = "^2.2.4"
asv = "^0.6.0"
interrogate = "^1.5.0"


[tool.poetry.group.exp.dependencies]
wandb = "^0.15.0"
loguru = "^0.7.0"
hydra-core = "^1.3.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
autoroot = "^1.0.0"

[tool.poetry.group.jlab.dependencies]
ipykernel = "^6.22.0"
autoroot = "^1.0.0"

[tool.poetry.group.docs.dependencies]
linkify-it-py = "^2.0.0"
jinja2 = "^3.1.2"
matplotlib = "^3.7.1"
ipython = "^8.11.0"
ipykernel = "^6.22.0"
watermark = "^2.3.1"
jupytext = "^1.14.5"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.8"
pymdown-extensions = "^9.11"
mknotebooks = "^0.7.1"
pygments = "^2.15.1"
mkdocs-bibtex = "^2.8.16"
mkdocs-jupyter = "^0.24.1"
mdx-truly-sane-lists = "^1.3"
pytkdocs = "^0.16.1"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-git-authors-plugin = "^0.7.0"
mkdocstrings = { version = "^0.21.2", extras = ["python"] }
markdown-katex = "^202112.1034"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options] # https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
# addopts = "--color=yes --doctest-modules --exitfirst --failed-first --strict-config --strict-markers --typeguard-packages=my_package --verbosity=2 --junitxml=reports/pytest.xml"
filterwarnings = ["error", "ignore::DeprecationWarning"]
testpaths = ["fieldx"]
xfail_strict = true


[tool.ruff] # https://github.com/charliermarsh/ruff
fix = true
cache-dir = "~/.cache/ruff"
dummy-variable-rgx = "^_$"
exclude = ["docs/"]
ignore-init-module-imports = true
line-length = 88
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # flake8-2020
  "YTT",
  # flake8-bugbear
  "B",
  # flake8-quotes
  "Q",
  # pylint
  "PLE",
  "PLR",
  "PLW",
  # misc lints
  "PIE",
  # flake8-pyi
  "PYI",
  # tidy imports
  "TID",
  # implicit string concatenation
  "ISC",
]
ignore = [
  # space before : (needed for how black formats slicing)
  # "E203",  # not yet implemented
  # module level import not at top of file
  "E402",
  # do not assign a lambda expression, use a def
  "E731",
  "E501",
  "PGH001",
  "RET504",
  "S101",
  "F722",
  'PLR2004',
  "PLR0913",
]
unfixable = ["ERA001", "F401", "F841", "T201", "T203"]
src = ["fieldx"]
target-version = "py38"

[tool.black] # https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
line-length = 88
target-version = ["py38"]


[tool.isort]
profile = "black"
combine_as_imports = true
force_sort_within_sections = true
force_grid_wrap = 2
skip = 'docs'

[tool.coverage.report] # https://coverage.readthedocs.io/en/latest/config.html#report
fail_under = 50
precision = 1
show_missing = true
skip_covered = true

[tool.coverage.run] # https://coverage.readthedocs.io/en/latest/config.html#run
branch = true
command_line = "--module pytest"
data_file = "reports/.coverage"
source = ["src"]

[tool.coverage.xml] # https://coverage.readthedocs.io/en/latest/config.html#xml
output = "reports/coverage.xml"
