[project]
name = "somax"
version = "0.0.2"
description = "Simple Ocean Models in JAX."
authors = [
    {name = "Juan Emmanuel Johnson", email = "jemanjohnson34@gmail.com"},
    {name = "Takaya Uchida", email = "roxyboy.guppy@gmail.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["ocean", "jax", "shallow water", "quasigeostrophic"]
requires-python = ">=3.12"
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "jaxtyping>=0.2.28",
    "equinox>=0.11.4",
    "diffrax>=0.6.0",
    "lineax>=0.0.6",
    "einops>=0.8.0",
    "finitevolx @ git+https://github.com/jejjohnson/finitevolX.git@v0.0.39",
    "spectraldiffx>=0.0.10",
]

[project.urls]
Repository = "https://github.com/jejjohnson/somax"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "pre-commit>=3.7",
]
lint = [
    "ruff>=0.9",
]
typecheck = [
    "ty==0.0.29",
]
sim = [
    "hydra-core>=1.3",
    "hydra-zen>=0.13",
    "omegaconf>=2.3",
    "orbax-checkpoint>=0.6",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-jupyter>=0.24",
    "jupytext>=1.16",
    "ipykernel>=6.29",
    "matplotlib>=3.10.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["somax"]

[tool.uv.sources]
spectraldiffx = { git = "https://github.com/jejjohnson/spectraldiffx.git", tag = "v0.0.10" }

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = ["notebooks/", "scripts/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E402", "E721", "E731", "E741", "F722"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
call-non-callable = "ignore"  # eqx.Module subclasses with __call__
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-method-override = "ignore"
invalid-parameter-default = "ignore"
invalid-return-type = "ignore"
not-iterable = "ignore"
unresolved-attribute = "ignore"
unresolved-import = "ignore"  # optional deps (orbax) + git-based deps

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=somax --cov-report=term-missing --cov-report=xml:coverage.xml"
filterwarnings = ["error", "ignore::DeprecationWarning"]
xfail_strict = true

[tool.coverage.run]
source = ["somax"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 50
